--- a/frontend/trivia_ui/src/App.css
+++ b/frontend/trivia_ui/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+nav {
+  height: 100px;
+  width: 100%;
+  background-color: black;
+  top: 0;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
+.nav-links {
+  display: grid;
+  grid-template-columns: 50% 50%;
   align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  height: inherit;
 }
 
-.App-link {
-  color: #61dafb;
+.nav-home {
+  margin-left: 20px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-links-right {
+justify-self: flex-end;
+display: flex;
+flex-direction: row;
+}
+
+.nav-summary, .nav-trivia {
+  grid-column: 2;
+  justify-self: flex-end;
+  margin-right: 20px;
+}
+
+.nav-links a {
+  color: silver;
+  font-size: 20px;
+}
+
+.nav-links a:hover {
+  color: antiquewhite;
 }
